# ephysVR

./: .gitignore  .~lock.ephys_constants.py#  CustomLogger.py  analyze_connectivity.py  analyze_pad_connection.py  analyze_rec.py  assign_pads.py  assign_pads_depr.py  bonding_yield.ipynb  calc_wafter2el_mapping.py  calc_wafter2el_mapping_depr.py  calculate_impedance.py  char_stim_units_new.py  characterize_mea1k_stimulaters.py  check_noise.py  circle_centers.csv  circle_centers_2200x1200.csv  circle_centers_v2_um_res.csv  columns_48pads.npy  create_bonded_config.py  delta_Vs.pkl  ephys_constants.py  extract_connectivity.py  extract_connectivity_depr.py  extract_impedance_stim_traces_v1.py  gen_ionp_pattern.py  import_sys.py  labeled_pads.npy  labeled_pads_um_res.npy  labeled_pads_v1.npy  make_mea1k_config.py  maxlab_helpers.py  mea1k_constants.py  mea1k_ephys.py  mea1k_ephys_Haotian.py  mea1k_ephys_houmanPC.py  mea1k_impedance_measure_invivo.py  mea1k_shortcut_stim.py  mea1k_utils.py  mea1k_viz.py  (+14 more)
assets/: circle_centers_46pads.csv  circle_centers_48pads.csv  concat_template.prm  neuroscope_template.xml  padcolors_46pads.csv  padcolors_48pads.csv
closed_loop/: .gitignore  CMakeLists.txt  FILE_GUIDE.md  Makefile  README.md  closedLoopSetup.py  config_template.py  example_custom_setup.py  process_raw_data.cpp  process_spike_events.cpp  quickstart.sh  setup_maxlab.sh
depr/: DEPRmxstim_2.py  DEPRread_mea1k_output3.py  analyze_connectivity_depr.py  check_rec.py  check_ss_jrc.py  check_ttls.py  create_bonded_config.py  explore_impedance.py  get_spikes.py  mea1k_viz.py  (+7 more)
(+551 files in other folders)
